fixed gap below menu

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {padding:15px 20px; margin:0; background: #f5f5f5; font-family: "Trebuchet 
 #text ul { margin-left:0em; padding-left:0.2em; margin-bottom:1em; }
 #text ul li { background:url(images/bullet.gif) 0em 0.3em no-repeat; padding-left: 0.8em; list-style: none; }
 #text ul li { background-image:url(images/bullet_child.gif); }
-#text ol li, ul li { margin-bottom:0.5em; }
+#text ul li { margin-bottom:0.5em; }
 #text ol { margin-left:1.5em; padding-left:0px; }
 #text ol li { list-style:decimal; background-image:none; padding-left:0em; }
 
